--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/CatBench_logo.png" />
+    <link rel="icon" type="image/png" id="favicon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CatBench Leaderboard - MLIP Benchmarking for Heterogeneous Catalysis</title>
     <meta name="description" content="Benchmarking Machine Learning Interatomic Potentials for Heterogeneous Catalysis" />
